@@ -50,7 +50,7 @@ public class LinesDataSet {
      */
     public List<Integer> getSeries(final String dataSetId) {
         if (!hasSeries(dataSetId)) {
-            throw new NoSuchElementException(String.format("No dataset '%s' registered", dataSetId));
+            throw new NoSuchElementException("No dataset '%s' registered".formatted(dataSetId));
         }
 
         return getSeriesFromMap(dataSetId);
