@@ -1,5 +1,16 @@
 package edu.hm.hafner.echarts;
 
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+
+import com.google.errorprone.annotations.CanIgnoreReturnValue;
+
+import edu.hm.hafner.echarts.ChartModelConfiguration.AxisType;
+import edu.hm.hafner.util.VisibleForTesting;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
@@ -7,15 +18,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
-
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
-
-import edu.hm.hafner.echarts.ChartModelConfiguration.AxisType;
-import edu.hm.hafner.util.VisibleForTesting;
-import edu.umd.cs.findbugs.annotations.CheckForNull;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
 import static java.util.Arrays.*;
 import static org.assertj.core.api.Assertions.*;
@@ -154,7 +156,7 @@ class SeriesBuilderTest {
         TimeFacade.reset();
         SeriesBuilder<Object> seriesBuilder = new TestSeriesBuilder(time);
 
-        LinesDataSet result = seriesBuilder.createDataSet(config, runs);
+        var result = seriesBuilder.createDataSet(config, runs);
 
         if (expected.isEmpty()) {
             assertThat(result.getDataSetIds()).isEmpty();
@@ -184,7 +186,7 @@ class SeriesBuilderTest {
     }
 
     private static BuildResult<?> createRun(final int buildNumber, final LocalDateTime buildTime) {
-        Build build = new Build(buildNumber, String.format("#%s", buildNumber),
+        var build = new Build(buildNumber, "#%s".formatted(buildNumber),
                 (int) buildTime.atZone(ZoneId.systemDefault()).toInstant().getEpochSecond());
 
         return new BuildResult<>(build, DAY);
@@ -223,7 +225,7 @@ class SeriesBuilderTest {
     }
 
     /**
-     * Helps building arguments to parameterized test.
+     * Helps to build arguments for a parameterized test.
      */
     private static class TestArgumentsBuilder {
         @CheckForNull
@@ -238,13 +240,14 @@ class SeriesBuilderTest {
         private ResultTime time;
 
         /**
-         * Set the tests configuration.
+         * Set the configuration.
          *
          * @param config
          *         to use in test
          *
          * @return this
          */
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setConfig(final ChartModelConfiguration config) {
             this.config = config;
 
@@ -259,6 +262,7 @@ class SeriesBuilderTest {
          *
          * @return this
          */
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setTestName(final String name) {
             testName = name;
 
@@ -273,6 +277,7 @@ class SeriesBuilderTest {
          *
          * @return this
          */
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setTime(final ResultTime time) {
             this.time = time;
 
@@ -283,10 +288,11 @@ class SeriesBuilderTest {
          * Set the analysis runs used in test.
          *
          * @param runs
-         *         used in test, defaults to empty list
+         *         used in test, defaults to an empty list
          *
          * @return this
          */
+        @CanIgnoreReturnValue
         TestArgumentsBuilder setRuns(final BuildResult<?>... runs) {
             this.runs = asList(runs);
 
@@ -294,14 +300,15 @@ class SeriesBuilderTest {
         }
 
         /**
-         * Set the tests expectations.
+         * Set the expected values.
          *
          * @param expectedSeries
-         *         to use in test, defaults to empty list
+         *         to use in test, defaults to an empty list
          *
          * @return this
          */
         @SafeVarargs
+        @CanIgnoreReturnValue
         final TestArgumentsBuilder setExpected(final List<Integer>... expectedSeries) {
             series = new ArrayList<>();
 
@@ -328,7 +335,7 @@ class SeriesBuilderTest {
         }
 
         /**
-         * Builds the tests argument.
+         * Builds the argument for the parameterized test.
          *
          * @return test arg
          */
